--- a/index.html
+++ b/index.html
@@ -3,9 +3,95 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Travel website</title>
+    <link rel="stylesheet" href="style/travel.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="travel_logo">
+                <div class="logo">
+                  <img src="Images/Group 40071 (2).png" alt="">
+                  <h2> Peregrinate <span class="World">World</span></h2>
+                </div>
+                <div class="container">
+                    <ul>
+                        <li ><a href=""><span class="World">Home</span></a></li>
+                        <li><a href="">Packages</a></li>
+                        <li><a href="">Testimonial</a></li>
+                        <li><a href="">Blog</a></li>
+                        <li><a href="">Contact</a></li>
+                    </ul>
+                </div>
+
+            </div>
+        </nav>
+        <!--banner problem-->
+        <div class="banner">
+            <img src="Images/Group 13 (1) (1).png" alt="">
+           <div class="text"><h1>Explore Your Travel</h1>
+            <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim ac quis sapien urna eu phasellus.</p>
+            <input type="text" name="" id="" placeholder="Where go">
+            <input type="text" name="" id="" placeholder="When">
+            <input class="find" type="text" name="" id="" placeholder="Find Now">
+           </div>
+
+        
+        </div>
+        <!--our popular tourist-->
+        <section class="container_2">
+            <div class="text_1">
+                <h2>Our Popular Tours</h2>
+                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                <ul>
+                    <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
+                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                    <li> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+                </ul>
+            <p>
+                Amet consectetur. Vulputate commodo felis molestie risus 
+ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus semper tincidunt. 
+            </p>
+            <button class="btn-primary">Read More</button>
+            </div>
+            <div>
+                <img src="Images/Rectangle 4.png" alt="">
+            </div>
+        </section>
+        <section>
+            <div class="destination">
+            <h2>Choose Your Destination</h2>
+            <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+        </div>
+        <div class="Images">
+            <div class="image_1">
+                <img src="Images/Rectangle 5.png" alt="">
+                <img src="Images/Rectangle 8.png" alt="">
+            </div>
+            <div>
+                <img src="Images/Rectangle 6.png" alt="">
+                <img src="Images/Rectangle 7.png" alt="">
+                <img src="Images/Rectangle 9.png" alt="">
+            </div>
+            <div>
+                <img src="Images/Rectangle 10.png" alt="">
+                <img src="Images/Rectangle 11.png" alt="">
+            </div>
+
+
+        </div>
+        </section>
+
+    </header>
+    <main>
+     <section>
+        <div class="destination">
+            <h2>Why Choose Us</h2>
+            <p> Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+     </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
