All features added

--- a/index.html
+++ b/index.html
@@ -87,11 +87,76 @@ ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitan
      <section>
         <div class="destination">
             <h2>Why Choose Us</h2>
-            <p> Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
-     </section>
+             <p> Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+           <div class="facts_card">
+            <div class="card">
+                <div class="best">
+                <img src="Images/hotel 1.png" alt="">
+                <h2 class="card-state">Handpicked Hotels</h2>
+                <p class="card-tile">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+            </div>
+            </div>
+            <div class="card">
+                <div class="world">
+                <img src="Images/map 1.png" alt="">
+                <h2 class="card-state">World Class Service</h2>
+                <p class="card-tile">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+            </div>
+            </div>
+           </div>
+            <div class="card">
+                <div class="best">
+                <img src="Images/price-tag 1.png" alt="">
+                <h2 class="card-state">Best Price Guarantee</h2>
+                <p class="card-tile">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+            </div>
+           </div>
+        </section>
+        <section>
+            <section class="container_2">
+                <div class="text_1">
+                    <h2>A Simple Perfect Place To Get Lost</h2>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. </p>
+                    <ul>
+                        <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                        <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                    </ul>
+                <button class="btn-primary">See More</button>
+                </div>
+                <div>
+                    <video controls width="610" height="424" src="Images/time_lapse_video_of_clouds_during_sunset (1080p).mp4"></video>
+                </div>
+        </section>
+        <section>
+            <div>
+               <div>
+                  <h2> Newsletter</h2>
+                  <p>Get your daily dose of travel news & tips. Sign up today!</p>
+                    <input type="text" name="name" id="" placeholder="Enter your name" required>
+                    <input type="text" name="email" id="" placeholder="Enter your email" required>
+                    <button class="btn-secondary">
+                        Subscribe
+                    </button>                
+                </div>
+               <div>
+
+               </div>
+            </div>
+
+        </section>
     </main>
     <footer>
-
+    <div>
+        <div class="logo">
+        <img src="Images/Group 40071 (2).png" alt="">
+        <h2> Peregrinate <span class="World">World</span></h2>
+    </div>
+        <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+       <img src="Images/Social.png" alt="">
+       <hr>
+       <p>&copy;2017, All Rights Reserved.</p>
+    </div>
     </footer>
 </body>
 </html>
