--- a/index.html
+++ b/index.html
@@ -29,12 +29,18 @@
         <!--banner problem-->
         <div class="banner">
             <img src="Images/Group 13 (1) (1).png" alt="">
-           <div class="text"><h1>Explore Your Travel</h1>
+           <div class="text">
+            <h1>Explore Your Travel</h1>
             <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim ac quis sapien urna eu phasellus.</p>
-            <input type="text" name="" id="" placeholder="Where go">
+          <div class="input"> <input type="text" name="" id="" placeholder="Where go">
             <input type="text" name="" id="" placeholder="When">
-            <input class="find" type="text" name="" id="" placeholder="Find Now">
+            <input class="find" type="text" name="" id="" placeholder="Select Type">
+           <div class="find">
+            <img src="Images/Frame.png" alt="">
+            <button class="btn-find">Find Now</button>
            </div>
+        </div>
+        </div>
 
         
         </div>
@@ -129,8 +135,8 @@ ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitan
                 </div>
         </section>
         <section>
-            <div>
-               <div>
+            <div class="news">
+               <div class="info">
                   <h2> Newsletter</h2>
                   <p>Get your daily dose of travel news & tips. Sign up today!</p>
                     <input type="text" name="name" id="" placeholder="Enter your name" required>
@@ -140,7 +146,11 @@ ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitan
                     </button>                
                 </div>
                <div>
-
+                <img src="Images/Rectangle 8 (1).png" alt="">
+                <div class="save_up">
+                    <h3>Travel.com</h3>
+                    <h2>Save up to 70%</h2>
+                </div>
                </div>
             </div>
 
