--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@ ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitan
             </div>
            </div>
         </section>
+        </section>
         <section>
             <section class="container_2">
                 <div class="text_1">
